# wheelchair_voice_commands

./: .gitignore  generate_md.py  main.py  pyproject.toml  speech-commands.md  temp.py  test_model_quatized.py  train_model.ipynb  training_parameters.yaml
speech_commands/: data.py  inference.py  mixednet.py  test.py  train.py  utils.py
speech_commands/audio/: audio_utils.py  augmentation.py  clips.py  spectrograms.py
speech_commands/layers/: delay.py  stream.py  strided_drop.py
